--- a/src/Ingredients/Ingredients.csproj
+++ b/src/Ingredients/Ingredients.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Protobuf Include="Protos/ingredients.proto" GrpcServices="Server" />
+    <Protobuf Include="Protos/ingredients.proto" GrpcServices="Client,Server" />
   </ItemGroup>
 
   <ItemGroup>
