--- a/src/Frontend/Frontend.csproj
+++ b/src/Frontend/Frontend.csproj
@@ -17,7 +17,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Protobuf Include="Protos/ingredients.proto" GrpcServices="Client" />
+    <Protobuf Include="Protos/ingredients.proto" GrpcServices="Client" ProtoRoot="Protos" />
+    <Protobuf Include="Protos/decimal.proto" GrpcServices="None" />
   </ItemGroup>
 
 </Project>
