--- a/src/Frontend/Frontend.csproj
+++ b/src/Frontend/Frontend.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <Protobuf Include="Protos/ingredients.proto" GrpcServices="Client" ProtoRoot="Protos" />
     <Protobuf Include="Protos/decimal.proto" GrpcServices="None" />
+    <Protobuf Include="Protos\orders.proto" GrpcServices="Client" />
   </ItemGroup>
 
 </Project>
