--- a/kube/app/ingredients.yaml
+++ b/kube/app/ingredients.yaml
@@ -4,11 +4,14 @@ metadata:
   name: ingredients
   namespace: pizza
 spec:
+  replicas: 2
   selector:
     matchLabels:
       app: ingredients
   template:
     metadata:
+      annotations:
+        linkerd.io/inject: enabled
       labels:
         app: ingredients
     spec:
@@ -22,9 +25,24 @@ spec:
               cpu: "500m"
           ports:
           - containerPort: 80
+          readinessProbe:
+            exec:
+              command: ['/bin/grpc_health_probe', '-addr=:80', '-service', 'ingredients', '-rpc-timeout', '5000ms']
+            initialDelaySeconds: 5
+          livenessProbe:
+            exec:
+              command: ['/bin/grpc_health_probe', '-addr=:80', '-service', 'ingredients', '-rpc-timeout', '5000ms']
+            initialDelaySeconds: 10
+            periodSeconds: 30
           env:
           - name: DOTNET_SYSTEM_NET_HTTP_SOCKETSHTTPHANDLER_HTTP2UNENCRYPTEDSUPPORT
             value: 'true' 
+          - name: Jaeger__ServiceName
+            value: 'ingredients'
+          - name: Jaeger__Host
+            value: 'jaeger-agent'
+          - name: Jaeger__Port
+            value: '6831'
 
 ---
 
