--- a/kube/app/orders.yaml
+++ b/kube/app/orders.yaml
@@ -9,6 +9,8 @@ spec:
       app: orders
   template:
     metadata:
+      annotations:
+        linkerd.io/inject: enabled
       labels:
         app: orders
     spec:
@@ -31,6 +33,12 @@ spec:
             value: '80'
           - name: Service__Ingredients__Http__Protocol
             value: 'http'
+          - name: Jaeger__ServiceName
+            value: 'orders'
+          - name: Jaeger__Host
+            value: 'jaeger-agent'
+          - name: Jaeger__Port
+            value: '6831'
 
 ---
 
